--- a/render.yaml
+++ b/render.yaml
@@ -5,14 +5,10 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: "python main.py"
+    startCommand: python main.py
     plan: free
     envVars:
       - key: BOT_TOKEN
-        value: "YOUR_BOT_TOKEN"  # Replace with your actual BOT_TOKEN
+        value: "7524278392:AAGd21uCuExw-JAuko9UC5l9GLrqmwy-mh4"
       - key: WEBHOOK_URL
-        value: "https://your-app-name.onrender.com"  # Replace with your actual Render URL
-      - key: MONGO_URL
-        value: "mongodb+srv://<your_mongo_credentials>"
-      - key: ADMIN_ID
-        value: "YOUR_ADMIN_ID"  # Replace with your admin's Telegram user ID
+        value: "https://start-to-messages.onrender.com"
