--- a/render.yaml
+++ b/render.yaml
@@ -7,10 +7,10 @@ services:
     plan: free
     envVars:
       - key: BOT_TOKEN
-        value: "your-bot-token-here"  # Replace this in the Render dashboard
-      - key: MONGO_URL
-        value: "your-mongo-url-here"  # Replace this in the Render dashboard
-      - key: ADMIN_ID
-        value: "your-admin-id-here"  # Replace this in the Render dashboard
+        value: "your_bot_token_here"
       - key: WEBHOOK_URL
-        value: "your-webhook-url-here"  # Replace this in the Render dashboard
+        value: "your_webhook_url_here"
+      - key: MONGO_URL
+        value: "your_mongo_url_here"
+      - key: ADMIN_ID
+        value: "your_admin_id_here"
